Executors-core tests update